# gpui

./: .gitignore  Cargo.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/gpui/: Cargo.toml  build.rs
crates/gpui/examples/: animation.rs  drag_drop.rs  grid_layout.rs  image_gallery.rs  mouse_pressure.rs  native_alert.rs  native_button.rs  native_checkbox.rs  native_collection_view.rs  native_combo_box.rs  native_dropdown.rs  native_dual_surface_sidebar.rs  native_glass_dock.rs  native_icon_button.rs  native_image_view.rs  native_list_views.rs  native_menu_button.rs  native_outline_view.rs  native_panel.rs  native_popover_extended.rs  native_progress_bar.rs  native_search_field.rs  native_search_shortcuts.rs  native_search_suggestions.rs  native_sidebar.rs  native_slider.rs  native_stack_view.rs  native_stepper.rs  native_styled_button.rs  native_switch.rs  native_tab_bar.rs  native_tab_view.rs  native_table_styles.rs  native_table_view.rs  native_text_field.rs  native_toggle_group.rs  native_toolbar.rs  native_toolbar_label.rs  native_toolbar_menu.rs  native_toolbar_popover.rs  (+17 more)
crates/gpui/examples/image/: image.rs
crates/gpui/src/: app.rs  assets.rs  gpui.rs  interactive.rs  keymap.rs  platform.rs  profiler.rs  style.rs  subscription.rs  taffy.rs  text_system.rs  window.rs
crates/gpui/src/app/: context.rs  entity_map.rs  visual_test_context.rs
crates/gpui/src/elements/: div.rs  img.rs  list.rs  mod.rs  native_button.rs  native_checkbox.rs  native_collection_view.rs  native_combo_box.rs  native_dropdown.rs  native_element_helpers.rs  native_glass_effect_view.rs  native_icon_button.rs  native_image_view.rs  native_menu_button.rs  native_outline_view.rs  native_progress_bar.rs  native_search_field.rs  native_sidebar.rs  native_slider.rs  native_stack_view.rs  native_stepper.rs  native_switch.rs  native_tab_view.rs  native_table_view.rs  native_text_field.rs  native_toggle_group.rs  native_tracking_view.rs  native_visual_effect_view.rs  uniform_list.rs
crates/gpui/src/keymap/: context.rs
crates/gpui/src/platform/: app_menu.rs  ios.rs  keystroke.rs  mac.rs  native_controls.rs  scap_screen_capture.rs
crates/gpui_ios/: Cargo.toml
crates/gpui_ios/src/: gpui_ios.rs  ios_native_controls.rs  open_type.rs  text_system.rs
crates/gpui_ios/src/native_controls/: button.rs  collection.rs  combo_box.rs  glass_effect_view.rs  menu.rs  mod.rs  outline.rs  popup.rs  sidebar.rs  stack_view.rs  switch.rs  (+2 more)
crates/gpui_ios_app/: Cargo.toml
crates/gpui_ios_app/src/: lib.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: events.rs  gpui_macos.rs  gpui_surface.rs  mac_native_controls.rs  window.rs
crates/gpui_macros/src/: gpui_macros.rs
crates/gpui_metal/: build.rs
crates/gpui_metal/src/: atlas.rs  renderer.rs  shaders.metal
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/gpui_windows/src/: events.rs  keyboard.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: github_download.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: clock.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: cursor.rs  sum_tree.rs
crates/util/: Cargo.toml
crates/util/src/: paths.rs  shell.rs  util.rs
ios/: run
ios/hello-world/: .gitignore  README.md  project.yml
ios/hello-world/GPUIiOSHello/: App.swift  GPUIiOSHello-Bridging-Header.h
ios/hello-world/scripts/: build-rust.sh  build-simulator.sh  list-devices.sh  run-device.sh
ios/runner/: main.m
(+70 files in other folders)
