[package]
name = "gpui_platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/gpui_platform.rs"

[lints]
workspace = true

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = ["gpui/test-support"]
inspector = ["gpui/inspector"]
leak-detection = ["gpui/leak-detection"]
runtime_shaders = ["gpui/runtime_shaders"]
wayland = ["gpui/wayland"]
x11 = ["gpui/x11"]
screen-capture = ["gpui/screen-capture"]
font-kit = ["gpui/font-kit"]
windows-manifest = ["gpui/windows-manifest"]

[dependencies]
gpui.workspace = true
